Foi adicionado um array com os generos dos livro ao Spinner para a seleção

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,14 @@
     <string name="app_name">TesteEnvioDedadosFirebase</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+
+    <string-array name="generos_livros">
+        <item>Ação</item>
+        <item>Aventura</item>
+        <item>Romance</item>
+        <item>Ficção Científica</item>
+        <item>Drama</item>
+        <!-- Adicione mais gêneros de livros conforme necessário -->
+    </string-array>
+
 </resources>
