Foi adicionado um array com os possiveis estados dos livro ao Spinner para a seleção

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,7 +9,17 @@
         <item>Romance</item>
         <item>Ficção Científica</item>
         <item>Drama</item>
+        <item>Terror</item>
         <!-- Adicione mais gêneros de livros conforme necessário -->
+    </string-array>
+
+    <string-array name="estado_livros">
+        <item>Opções</item>
+        <item>Em perfeitas condições </item>
+        <item>O livro se encontra novo</item>
+        <item>Em condições medianas/orelhas </item>
+        <item>Com aspecto de velho</item>
+        <item>Muito usado</item>
     </string-array>
 
 </resources>
